[tool.poetry]
name = "nonebot-plugin-llmchat"
version = "0.1.0"
description = "Nonebot AI group chat plugin supporting multiple API preset configurations"
license = "GPL"
authors = ["FuQuan i@fuquan.moe"]
readme = "README.md"
homepage = "https://github.com/FuQuan233/nonebot-plugin-llmchat"
repository = "https://github.com/FuQuan233/nonebot-plugin-llmchat"
documentation = "https://github.com/FuQuan233/nonebot-plugin-llmchat#readme"
keywords = ["nonebot", "nonebot2", "llm", "ai"]

[tool.poetry.dependencies]
python = "^3.9"
openai = ">=1.0.0>"
nonebot2 = "^2.2.0"
aiofiles = ">=24.0.0"
nonebot-plugin-apscheduler = "^0.5.0"
nonebot-adapter-onebot = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"